--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             Topics
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="D:\Programs\WebDev\AnimeTree\AnimeTree\top_10_shounen.html">Top 10 Shounen Anime</a></li>
+                            <li><a class="dropdown-item" href="\AnimeTree\top_10_shounen.html">Top 10 Shounen Anime</a></li>
 
                             <li>
                                 <hr class="dropdown-divider">
