--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <h2>Top 10 Shounen Anime</h2>
                     <p>Dragon Ball, Naruto, One Piece, and many more - anime's shounen series tend to be very popular. But which are the best shows of them all?
                     </p>
-                    <p><a class="btn btn-secondary" href="D:\Programs\WebDev\AnimeTree\AnimeTree\top_10_shounen.html" role="button">View details »</a></p>
+                    <p><a class="btn btn-secondary" href="/AnimeTree/top_10_shounen.html" role="button">View details »</a></p>
                 </div>
                 <div class="col-md-4 text-center">
                     <img src="top_10_anime_movies.png" class="bd-placeholder-img rounded-square" width="400" height="300" />
