--- a/top_10_shounen.html
+++ b/top_10_shounen.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="D:\Programs\WebDev\AnimeTree\AnimeTree/index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/AnimeTree/index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -54,16 +54,9 @@
             <div class="col-24 text-center">
                 <h1 class="blog-header-logo text-dark" href="#">Top 10 Shounen Anime</h1>
             </div>
-            <div class="col-4 d-flex justify-content-end align-items-center">
-                <a class="link-secondary" href="#" aria-label="Search">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24">
-                        <title>Search</title>
-                        <circle cx="10.5" cy="10.5" r="7.5"></circle>
-                        <path d="M21 21l-5.2-5.2"></path>
-                    </svg>
-                </a>
-            </div>
+
         </div>
+
     </header>
 
     <div class="container my-4">
